Table component and unit test

--- a/exo-react/.eslintrc.json
+++ b/exo-react/.eslintrc.json
@@ -22,8 +22,8 @@
         "react/react-in-jsx-scope": "off",
         "camelcase": "error",
         "spaced-comment": "error",
-        "quotes": ["error", "single"],
-        "no-duplicate-imports": "error"
+        "no-duplicate-imports": "error",
+        "prettier/prettier": ["error", { "singleQuote": true }]
     },
     "settings": {
         "import/resolver": {
